gke-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong-dep
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
spec:
  type: NodePort
  selector:
    app: logger-timestamper-dep
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
