gke-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-ingress
  labels:
    name: logger-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logger-svc
                port:
                  number: 80
